<resources>
    <string name="app_name">1ValetDevices</string>

    <string name="nav_drawer_open">Open</string>
    <string name="nav_drawer_close">Close</string>

    <string name="title_home">Home</string>
    <string name="title_my_devices">My Devices</string>
    <string name="title_settings">Settings</string>

    <string name="item_device_card_title_placeholder_text">Samsung Galaxy</string>
    <string name="item_device_card_status_placeholder_text">Status: %1s</string>

    <string name="layout_recent_devices_title">Most Recent Devices</string>
    
    <string name="fragment_home_title">Devices</string>
    <string name="fragment_home_search">Thinking about a specific phone?</string>
    <string name="fragment_home_date">Today\'s Date</string>
    <string name="fragment_home_all_devices">All Devices</string>
    <string name="fragment_home_device_stats">Device Stats</string>
    <string name="fragment_home_info_both_platforms">Android: %1s \u0020\u0020 iOS: %2s</string>
    <string name="fragment_home_info_total">Total Devices: %1s</string>

    <string name="fragment_details_title">Device Details</string>
    <string name="fragment_details_name">Name - %1s</string>
    <string name="fragment_details_os">Os - %1s</string>
    <string name="fragment_details_platform">Platform - %1s</string>
    <string name="fragment_details_size">Size - %1s</string>
    <string name="fragment_details_reviews">Reviews: </string>
    <string name="nav_header_title">1Valet Devices</string>
</resources>